syntax = "proto2";

package garmin_vivomovehr;

option java_package = "nodomain.freeyourgadget.gadgetbridge.proto.garmin";

import "garmin/gdi_device_status.proto";
import "garmin/gdi_find_my_watch.proto";
import "garmin/gdi_core.proto";
import "garmin/gdi_http_service.proto";
import "garmin/gdi_data_transfer_service.proto";
import "garmin/gdi_sms_notification.proto";
import "garmin/gdi_calendar_service.proto";
import "garmin/gdi_settings_service.proto";
import "garmin/gdi_notifications_service.proto";

message Smart {
    optional CalendarService calendar_service = 1;
    optional HttpService http_service = 2;
    optional DataTransferService data_transfer_service = 7;
    optional DeviceStatusService device_status_service = 8;
    optional FindMyWatchService find_my_watch_service = 12;
    optional CoreService core_service = 13;
    optional SmsNotificationService sms_notification_service = 16;
    optional SettingsService settings_service = 42;
    optional NotificationsService notifications_service = 49;
}

/*
1:  CALENDAR_EVENTS_SERVICE_FIELD_NUMBER
2:  CONNECT_IQ_HTTP_SERVICE_FIELD_NUMBER
3:  CONNECT_IQ_INSTALLED_APPS_SERVICE_FIELD_NUMBER
4:  CONNECT_IQ_APP_SETTINGS_SERVICE_FIELD_NUMBER
5:  INTERNATIONAL_GOLF_SERVICE_FIELD_NUMBER
6:  SWING_SENSOR_SERVICE_FIELD_NUMBER
7:  DATA_TRANSFER_SERVICE_FIELD_NUMBER
8:  DEVICE_STATUS_SERVICE_FIELD_NUMBER
9:  INCIDENT_DETECTION_SERVICE_FIELD_NUMBER
10: AUDIO_PROMPTS_SERVICE_FIELD_NUMBER
11: WIFI_SETUP_SERVICE_FIELD_NUMBER
12: FIND_MY_WATCH_SERVICE_FIELD_NUMBER
13: CORE_SERVICE_FIELD_NUMBER
14: GROUP_LIVE_TRACK_SERVICE_FIELD_NUMBER
15: EXPRESSPAY_COMMAND_SERVICE_FIELD_NUMBER
16: SMS_NOTIFICATION_SERVICE_FIELD_NUMBER
17: LIVE_TRACK_MESSAGING_SERVICE_FIELD_NUMBER
18: INSTANT_INPUT_SERVICE_FIELD_NUMBER
19: SPORT_PROFILE_SETUP_SERVICE_FIELD_NUMBER
20: HSA_DATA_SERVICE_FIELD_NUMBER
21: LIVE_TRACK_SERVICE_FIELD_NUMBER
22: EXPLORE_SYNC_SERVICE_FIELD_NUMBER
23: WAY_POINT_TRANSFER_SERVICE_FIELD_NUMBER
24: DEVICE_MESSAGE_SERVICE_FIELD_NUMBER
25: LTE_SERVICE_FIELD_NUMBER
26: ANTI_THEFT_ALARM_SERVICE_FIELD_NUMBER
27: CREDENTIALS_SERVICE_FIELD_NUMBER
28: INREACH_TRACKING_SERVICE_FIELD_NUMBER
29: INREACH_MESSAGING_SERVICE_FIELD_NUMBER
30: EVENT_SHARING_FIELD_NUMBER
31: GENERIC_ITEM_TRANSFER_SERVICE_FIELD_NUMBER
32: INREACH_CONTACT_SYNC_SERVICE_FIELD_NUMBER
33: HAND_CALIBRATION_SERVICE_FIELD_NUMBER
*/
